Interface fix: make bookmarklet more visible.
git-svn-id: https://semanticscuttle.svn.sourceforge.net/svnroot/semanticscuttle/trunk@282 b3834d28-1941-0410-a4f8-b48e95affb8f

--- a/scuttle.css
+++ b/scuttle.css
@@ -528,6 +528,11 @@ ul {
 	background: #FFF url('images/bg_admin.png') repeat-y top right;
 }
 
+a.bookmarklet {
+	padding: 2px;
+	background-color: #AAFAEE;
+}
+
 /* DOJO Style */
 
 /* DOJO Style */
